--- a/public/style/style.css
+++ b/public/style/style.css
@@ -12,6 +12,8 @@
 
     --whiteColor: #d3cccc;
 
+    --NormalFont:"Kufam", sans-serif;
+
     scroll-behavior: smooth;
     background: #fff5f5;
     /* font-size: clamp(5px, 10px, 25px);  */
@@ -23,7 +25,6 @@
 
 ::-webkit-scrollbar {
     width: .5rem;
-
   }
   
   /* Track */
@@ -43,5 +44,35 @@
 
 #contentWrapper{
     display: grid;
-
+    grid-template-rows: 1fr 1fr 1fr;
 }
+
+#contentWrapper header{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url('/public/img/backgroundBlack.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.underline {
+    background: #FEAD23;
+    margin: 0 auto;
+    height: 4px;
+    width: 15rem;
+}
+
+#contentWrapper header h1{
+    font-family: var(--NormalFont);
+    font-size: 6rem;
+    font-weight: 400;
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+}
+
+
