--- a/public/style/style.css
+++ b/public/style/style.css
@@ -9,8 +9,10 @@
 :root{
     --blur-background: rgba(000, 000, 000, 0.8);
     --light-BlueBackground: rgba(58, 109, 141, 0.45);
+    --NormalBoxShadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 
     --whiteColor: #d3cccc;
+    --FontColor1: #363435;
 
     --NormalFont:"Kufam", sans-serif;
 
@@ -44,7 +46,7 @@
 
 #contentWrapper{
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr auto;
 }
 
 #contentWrapper header{
@@ -53,7 +55,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url('/public/img/backgroundBlack.png');
+    background: url('/public/img/space.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -74,5 +76,42 @@
     text-transform: uppercase;
     color: white;
 }
+
+#contentWrapper main{
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+main nav{
+    width: 80vw;
+    height: auto;
+    background-color: #D9D9D9;
+    box-shadow: var(--NormalBoxShadow);
+}
+
+main nav ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 1rem;
+}
+
+main nav ul li{
+    list-style: none;
+}
+
+main nav ul li a{
+    font-family: var(--NormalFont);
+    font-size: 4rem;
+    font-weight: 400;
+    font-style: normal;
+    color: var(--FontColor1);
+}
+
+
+
 
 
